progress on blog

--- a/Research.html
+++ b/Research.html
@@ -2144,7 +2144,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     --fig-cap-color:   rgba(0, 0, 0, 0.6);
     /*-- Specify custom fonts ~~~ must be imported above   --*/
     --heading-font:    "Roboto Slab";
-    --mono-font:       "Montserrat";
+    --mono-font:       monospace;
     --body-font:       sans-serif;
     --navbar-font:     'Roboto', sans-serif;  /* websites + blogs only */
   }
@@ -2381,7 +2381,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="nav-right">
 <a href="index.html">Home</a>
 <a href="blog.html">Blog</a>
-<a href="research.html">Research</a>
+<a href="Research.html">Research</a>
 <a href="cv.html">CV</a>
 <a href="contact.html">Contact Me</a>
 <a href="https://github.com/dochvam">
