--- a/blog.html
+++ b/blog.html
@@ -2552,7 +2552,7 @@ function init_posts_list() {
 <a href="#">More articles &raquo;</a>
 </div>
 </div>
-<!--/radix_placeholder_article_listing-->
+<!--/radix_placeholder_article_listing-->
 
 <div class="d-title">
 <h1>Blog</h1>
@@ -2586,4 +2586,4 @@ function init_posts_list() {
 
 </body>
 
-</html>
+</html
