--- a/_SDMs/2022-01-31-intro-to-nimbleecology-site-occupancy-models/intro-to-nimbleecology-site-occupancy-models.html
+++ b/_SDMs/2022-01-31-intro-to-nimbleecology-site-occupancy-models/intro-to-nimbleecology-site-occupancy-models.html
@@ -1858,7 +1858,7 @@ gamma[4]       Wind (det) -0.50269720 -0.9427505 -0.07756671</code></pre>
 <p>Thanks for reading! Hit the “contact me” button at the top of the page if you have any questions or feedback.</p>
 <h1 id="citations-and-additional-reading">Citations and additional reading</h1>
 <p>All the code in this exercise is available in the Github repository for this blog, specifically here. Please feel free to download and play around with this .Rmd file, and to copy and use this code freely.</p>
-<p>If you want to see the code underlying the occupancy distribution used, it’s on <a href="https://github.com/nimble-dev/nimbleEcology/blob/master/R/dOcc.R">this GitHub page</a>. The nimbleEco</p>
+<p>If you want to see the code underlying the occupancy distribution used, it’s on <a href="https://github.com/nimble-dev/nimbleEcology/blob/master/R/dOcc.R">this GitHub page</a>. The nimbleEcology vignette is <a href="https://cran.r-project.org/web/packages/nimbleEcology/vignettes/Introduction_to_nimbleEcology.html">here</a>.</p>
 <p>For a really helpful blog post on implementing the occupancy model in NIMBLE without marginalization, check out <a href="https://masonfidino.com/a_simple_static_occupancy_model/">Mason Fidino’s writeup here</a>. Dr. Fidino’s blog was a big inspiration in getting this one off the ground.</p>
 <p>Relevant papers and books:</p>
 <ul>
