--- a/_SDMs/2022-01-31-intro-to-nimbleecology-site-occupancy-models/intro-to-nimbleecology-site-occupancy-models.html
+++ b/_SDMs/2022-01-31-intro-to-nimbleecology-site-occupancy-models/intro-to-nimbleecology-site-occupancy-models.html
@@ -1751,8 +1751,8 @@ Figure 1: Swift (c) J Tanner 2022. <a href="https://macaulaylibrary.org/asset/40
   <span class='op'>)</span>,
   data <span class='op'>=</span> <span class='fu'><a href='https://rdrr.io/r/base/list.html'>list</a></span><span class='op'>(</span>
     obs <span class='op'>=</span> <span class='va'>obs</span>,
-    <span class='co'># I like indexing these here for two reasons: (1) I make sure they're going</span>
-    <span class='co'>#   into the model in order, and (2) </span>
+    <span class='co'># I like indexing these here so I make sure they're going</span>
+    <span class='co'>#   into the model in the right order</span>
     detectionCovars <span class='op'>=</span> 
       <span class='va'>obsLevelData</span><span class='op'>[</span>,, <span class='fu'><a href='https://rdrr.io/pkg/nimble/man/nimble-R-functions.html'>c</a></span><span class='op'>(</span><span class='st'>"intercept"</span>, <span class='st'>"elevation"</span>, <span class='st'>"forestCover"</span>, <span class='st'>"windLevel"</span><span class='op'>)</span><span class='op'>]</span>,
     occuCovars <span class='op'>=</span> <span class='va'>siteLevelData</span><span class='op'>[</span>, <span class='fu'><a href='https://rdrr.io/pkg/nimble/man/nimble-R-functions.html'>c</a></span><span class='op'>(</span><span class='st'>"intercept"</span>, <span class='st'>"elevation"</span>, <span class='st'>"forestCover"</span><span class='op'>)</span><span class='op'>]</span>
@@ -1863,7 +1863,7 @@ gamma[4]       Wind (det) -0.503 -0.94 -0.078</code></pre>
 <p>Stay tuned for two follow up posts. In the first, I’ll discuss easy ways to extend the occupancy model in NIMBLE to showcase the flexibility of this tool. Then, I’ll showcase an N-mixture model, and we’ll explore a case where marginalizing over a latent state can dramatically improve computation time.</p>
 <p>Thanks for reading! Hit the “contact me” button at the top of the page if you have any questions or feedback.</p>
 <h1 id="citations-and-additional-reading">Citations and additional reading</h1>
-<p>All the code in this exercise is available in the Github repository for this blog, specifically here. Please feel free to download and play around with this .Rmd file, and to copy and use this code freely.</p>
+<p>All the code in this exercise is available in the Github repository for this blog, specifically <a href="https://github.com/dochvam/dochvam.github.io/blob/main/_SDMs/2022-01-31-intro-to-nimbleecology-site-occupancy-models/intro-to-nimbleecology-site-occupancy-models.Rmd">here</a>. Please feel free to download and play around with this .Rmd file, and to copy and use this code freely.</p>
 <p>If you want to see the code underlying the occupancy distribution used, it’s on <a href="https://github.com/nimble-dev/nimbleEcology/blob/master/R/dOcc.R">this GitHub page</a>. The nimbleEcology vignette is <a href="https://cran.r-project.org/web/packages/nimbleEcology/vignettes/Introduction_to_nimbleEcology.html">here</a>.</p>
 <p>For a really helpful blog post on implementing the occupancy model in NIMBLE without marginalization, check out <a href="https://masonfidino.com/a_simple_static_occupancy_model/">Mason Fidino’s writeup here</a>. Dr. Fidino’s blog was a big inspiration in getting this one off the ground.</p>
 <p>Relevant papers and books:</p>
